user-avatar is added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -134,3 +134,18 @@ footer{
    margin-bottom: 0%;
    margin-top: auto;
 }
+#avatar{
+   width: 60px;
+   height: 55px;
+   border-radius: 27px;
+}
+#user-fit-image{
+   width: auto;
+   height: auto;
+}
+.alert{
+   text-decoration-color: #818181;
+}
+// .hover-value{
+//    aria-expanded: true;
+// }
