--- a/app/views/pages/userss.html.erb
+++ b/app/views/pages/userss.html.erb
@@ -2,16 +2,17 @@
 <strong> Follow them </strong> 
 
 <div class="container">
-    <div class="row">
+    <div class="row ">
     <% @users.each do |user| %> 
-        <div class="col-1 pt-2"> <%= user.name%> </div>
+        <div class="col-1 pt-3"> <%= user.name%> </div>
         <% if user == current_user %>
-            <div class="col-1 pt-2"> <%= button_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </div>
+            <div class="col-2 pt-3"> <%= button_to 'Edit profile', edit_user_registration_path , method: :get %> </div>
         <% else %>
         
-            <div class="col-1 pt-2", id="user-<%= user.id %>-button"> <%= render "pages/user_button", user: user %> </div>
+            <div class="col-2 pt-3", id="user-<%= user.id %>-button"> <%= render "pages/user_button", user: user %> </div>
         <% end %>
-        <div class="col-10"></div>
+        <div class="col-1 pt-1 pb-2"><%= render 'pages/user_avatar', user: user %> </div>
+        <div class="col-8"></div>
     <% end %>
     </div>
 </div>
