--- a/app/views/pages/userss.html.erb
+++ b/app/views/pages/userss.html.erb
@@ -11,7 +11,9 @@
         
             <div class="col-2 pt-3", id="user-<%= user.id %>-button"> <%= render "pages/user_button", user: user %> </div>
         <% end %>
-        <div class="col-1 pt-1 pb-2"><%= render 'pages/user_avatar', user: user %> </div>
+        <div class="col-1 pt-1 pb-2">
+            <%= link_to (image_tag user.avatar_thumbnail, id: 'avatar') , user_info_path(user) %>
+        </div>
         <div class="col-8"></div>
     <% end %>
     </div>
