--- a/app/views/questions/_question_view.html.erb
+++ b/app/views/questions/_question_view.html.erb
@@ -6,13 +6,14 @@
             <%= link_to question.question , question_path(question)%> </h5>
             <% user1 = User.find(question.user_id) %>
             <small class="text-right">Asked by: <%= user1.name %>
-            <%= render "pages/user_avatar", user: user1 %></small>
+                <%= link_to (image_tag user1.avatar_thumbnail, id: 'avatar') , user_info_path(user1) %>
+            </small>
             <small class="text-right pt-3"> <%= time_ago_in_words(question.created_at) %> ago</small>
         </div>
         <p class="mb-1 row col-12"><%= ans.answer %></p>
             <% user2 = User.find(ans.user_id) %>
         <small class="col-1 p-1">Answerd by: <%= user2.name %>
-            <%= render "pages/user_avatar", user: user1 %></small>
+            <%= link_to (image_tag user1.avatar_thumbnail, id: 'avatar') , user_info_path(user1) %>
         </small>
         <small class="col-1 pt-3"> <%= time_ago_in_words(ans.created_at) %> ago</small>
     </div>
