--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -11,7 +11,9 @@
         <small class="right-2"><%= link_to "delete" , question_path(question), method: :delete %></small>
     <% else %>
     <% user1 =User.find(question.user_id)  %>
-        <small class="right-1" >Asked by: <%= user1.name %><%= render "pages/user_avatar", user: user1 %></small>
+        <small class="right-1" >Asked by: <%= user1.name %>
+            <%= link_to (image_tag user1.avatar_thumbnail, id: 'avatar') , user_info_path(user1) %>
+        </small>
         <small class="right-2 pt-3"><%= time_ago_in_words(question.created_at) %> ago</small>
     <% end %>
 
